--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
     "core-js": "^3.2.1",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-compat": "^3.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-cypress": "^2.0.1",
-    "eslint-plugin-ejs": "^0.0.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-markdown": "^1.0.0",
@@ -56,6 +55,9 @@
     "wpdtrt_target": "../../"
   },
   "scripts": {
+    "prelint:css": "cp .sass-lint.yml $npm_package_config_wpdtrt_target",
+    "prelint:js": "cp .eslintrc $npm_package_config_wpdtrt_target",
+    "prelint:php": "cp phpcs.xml $npm_package_config_wpdtrt_target",
     "pretest": "./scripts/install-fixtures.sh",
     "test": "mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
