--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "lint:composer": "cd $INIT_CWD && composer validate",
     "lint:css": "cd $INIT_CWD && sass-lint '**/*.scss' --verbose --no-exit",
     "lint:js": "cd $INIT_CWD && eslint './js/**/*.js'",
-    "lint:php": "cd $INIT_CWD && ./vendor/bin/phpcs **/*.php --standard=phpcs.xml",
+    "lint:php": "cd $INIT_CWD && ./vendor/bin/phpcs **/*.php --ignore=autoload.php --standard=phpcs.xml",
     "lint": "npm-run-all lint:*"
   },
   "repository": {
