--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "fancy-log": "^1.3.2",
     "gh-rate-limit": "^1.0.0",
     "include-media": "^1.4.9",
+    "node-sass": "^4.13.1",
     "normalize-html-whitespace": "^1.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.0",
     "postcss-pxtorem": "^4.0.1",
     "sass-lint": "^1.13.1",
     "tenon-node": "^0.4.1"
@@ -52,6 +54,7 @@
     "mocha": "^6.2.1"
   },
   "scripts": {
+    "precompile:postcss": "cp postcss.config.js .browserslistrc $INIT_CWD",
     "prelint:css": "cp .sass-lint.yml $INIT_CWD",
     "prelint:js": "cp .eslintrc $INIT_CWD",
     "prelint:php": "cp phpcs.xml $INIT_CWD",
@@ -61,6 +64,8 @@
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
+    "compile:scss": "cd $INIT_CWD && node-sass scss --output css --recursive",
+    "compile:postcss": "cd $INIT_CWD && postcss css/**/*.css --replace",
     "docs:naturaldocs": "mono \"Natural Docs/NaturalDocs.exe\" ./config/naturaldocs",
     "lint:composer": "cd $INIT_CWD && composer validate",
     "lint:css": "cd $INIT_CWD && sass-lint '**/*.scss' --verbose --no-exit",
