--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
   },
   "config": {
     "return_path": "../../../",
-    "scss_import_suffix": "wp"
+    "scss_import_suffix": ""
   },
   "scripts": {
     "postinstall": "echo ✅ Please read the README",
     "precompile:postcss": "cp postcss.config.js .browserslistrc $INIT_CWD",
-    "precompile:scss_import": "if [ $CI ]; then npm config set wpdtrt-npm-scripts:scss_import_suffix ci; fi",
+    "precompile:css": "if [ -z ${CI+x} ]; then suffix=wp; else suffix=ci; fi && npm config set wpdtrt-npm-scripts:scss_import_suffix $suffix",
     "prelint:css": "cp .sass-lint.yml $INIT_CWD",
     "prelint:js": "cp .eslintrc $INIT_CWD",
     "prelint:php": "cp phpcs.xml $INIT_CWD",
@@ -71,9 +71,9 @@
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
     "compile:css": "cd $INIT_CWD && npm run compile:scss_import --prefix $npm_package_config_return_path && npm run compile:scss --prefix $npm_package_config_return_path && npm run compile:postcss --prefix $npm_package_config_return_path",
+    "compile:postcss": "cd $INIT_CWD && postcss css/**/*.css --replace",
     "compile:scss_import": "cd $INIT_CWD && echo '@import \"wpdtrt/dependencies-'${npm_package_config_scss_import_suffix}'\";' > scss/_wpdtrt-import.scss",
     "compile:scss": "cd $INIT_CWD && node-sass scss --output css --recursive",
-    "compile:postcss": "cd $INIT_CWD && postcss css/**/*.css --replace",
     "docs:naturaldocs": "mono \"Natural Docs/NaturalDocs.exe\" ./config/naturaldocs",
     "lint:composer": "cd $INIT_CWD && composer validate",
     "lint:css": "cd $INIT_CWD && sass-lint '**/*.scss' --verbose --no-exit",
