Move script one liners into separate files for ease of reading, move config files to subfolder, remove old deps

--- a/config/.browserslistrc
+++ b/config/.browserslistrc
@@ -1,4 +1,5 @@
 # Supported browsers for Autoprefixer
 # Run 'npx browserslist' to see which browsers this includes
 
-> 5%
+last 2 versions
+ie >= 11
