--- a/package.json
+++ b/package.json
@@ -22,23 +22,22 @@
     "gulp"
   ],
   "dependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.1",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "core-js": "^3.2.1",
-    "del": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-compat": "^3.3.0",
-    "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-markdown": "^1.0.0",
     "execa": "^2.1.0",
-    "fancy-log": "^1.3.2",
     "gh-rate-limit": "^1.0.0",
     "include-media": "^1.4.9",
     "node-sass": "^4.13.1",
@@ -53,33 +52,26 @@
     "mocha": "^6.2.1"
   },
   "config": {
+    "compile_js_backend": "js/backend.js",
+    "compile_js_frontend": "js/frontend.js",
+    "lint_js_eslint": "eslint-config-airbnb-base eslint-plugin-chai-friendly eslint-plugin-cypress",
     "return_path": "../../../",
     "scss_import_suffix": ""
   },
   "scripts": {
-    "postinstall": "echo ✅ Please read the README",
-    "precompile:postcss": "cp postcss.config.js .browserslistrc $INIT_CWD",
-    "precompile:css": "if [ -z ${CI+x} ]; then suffix=wp; else suffix=ci; fi && npm config set wpdtrt-npm-scripts:scss_import_suffix $suffix",
-    "prelint:css": "cp .sass-lint.yml $INIT_CWD",
-    "prelint:js": "cp .eslintrc $INIT_CWD",
-    "prelint:php": "cp phpcs.xml $INIT_CWD",
-    "pretest": "./scripts/install-fixtures.sh",
-    "preuninstall": "cd $INIT_CWD && rm .browserslistrc .eslintrc .sass-lint.yml phpcs.xml",
+    "preinstall": "chmod -R a+x scripts",
+    "pretest": "./scripts/install-npm-dependencies.sh && ./scripts/install-fixtures.sh",
+    "compile:css": "./scripts/install-config.sh && ./scripts/compile-css.sh",
+    "compile:js": "./scripts/install-config.sh && ./scripts/compile-js.sh",
+    "docs:naturaldocs": "mono \"Natural Docs/NaturalDocs.exe\" ./config/naturaldocs",
+    "lint": "./scripts/install-config.sh && ./scripts/lint.sh",
     "test": "mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
-    "compile:css": "cd $INIT_CWD && npm run compile:scss_import --prefix $npm_package_config_return_path && npm run compile:scss --prefix $npm_package_config_return_path && npm run compile:postcss --prefix $npm_package_config_return_path",
-    "compile:postcss": "cd $INIT_CWD && postcss css/**/*.css --replace",
-    "compile:scss_import": "cd $INIT_CWD && echo '@import \"wpdtrt/dependencies-'${npm_package_config_scss_import_suffix}'\";' > scss/_wpdtrt-import.scss",
-    "compile:scss": "cd $INIT_CWD && node-sass scss --output css --recursive",
-    "docs:naturaldocs": "mono \"Natural Docs/NaturalDocs.exe\" ./config/naturaldocs",
-    "lint:composer": "cd $INIT_CWD && composer validate",
-    "lint:css": "cd $INIT_CWD && sass-lint '**/*.scss' --verbose --no-exit",
-    "lint:js": "cd $INIT_CWD && eslint './js/**/*.js'",
-    "lint:php": "cd $INIT_CWD && ./vendor/bin/phpcs **/*.php --ignore=autoload.php --standard=phpcs.xml",
-    "lint": "cd $INIT_CWD && npm run lint:composer --prefix $npm_package_config_return_path && npm run lint:css --prefix $npm_package_config_return_path && npm run lint:js --prefix $npm_package_config_return_path && npm run lint:php --prefix $npm_package_config_return_path"
+    "postinstall": "./scripts/install-config.sh",
+    "postuninstall": "./scripts/uninstall-config.sh && ./scripts/uninstall-npm-dependencies.sh"
   },
   "repository": {
     "type": "git",
