Move Natural Docs execution into a shell script

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "compile:css": "./scripts/compile/css.sh",
     "compile:js": " ./scripts/compile/js.sh",
     "compile": "./scripts/compile/css.sh && ./scripts/compile/js.sh",
-    "docs:naturaldocs": "mono \"Natural Docs/NaturalDocs.exe\" ./config/naturaldocs",
+    "docs:naturaldocs": "./scripts/docs/naturaldocs.sh",
+    "docs": "./scripts/docs/naturaldocs.sh",
     "lint:css": "./scripts/lint/css.sh",
     "lint:js": "./scripts/lint/js.sh",
     "lint:php": "./scripts/lint/php.sh",
@@ -74,7 +75,7 @@
     "test": "mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "postinstall": "./scripts/install/config.sh && ./scripts/install/composer.sh && ./scripts/install/naturaldocs.sh && ./scripts/install/yarn.sh",
     "postuninstall": "./scripts/uninstall/config.sh && ./scripts/uninstall/npm-test.sh",
-    "reinstall": "chmod -R a+x scripts && ./scripts/install/config.sh && ./scripts/install/npm-test.sh"
+    "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/install/config.sh && ./scripts/install/npm-test.sh"
   },
   "repository": {
     "type": "git",
