--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
-    "test": "./scripts/install/yarn.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "test": "./scripts/install/npm.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "postinstall": "./scripts/install/config.sh && ./scripts/install/composer.sh",
     "postuninstall": "./scripts/uninstall/config.sh && ./scripts/uninstall/npm-test.sh",
     "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/install/config.sh && ./scripts/install/composer.sh"
