--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-sass": "^4.13.1",
     "normalize-html-whitespace": "^1.0.0",
     "postcss-cli": "^7.1.0",
+    "postcss-custom-properties": "^9.1.1",
     "postcss-pxtorem": "^4.0.1",
     "postcss-typescale": "^0.2.3",
     "sass-lint": "^1.13.1",
