--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gh-rate-limit": "^1.0.0",
     "include-media": "^1.4.9",
     "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
     "postcss-cli": "^7.1.0",
     "postcss-custom-properties": "^9.1.1",
