--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "return_path": "./"
   },
   "scripts": {
-    "preinstall": "chmod a+x scripts/**/*.sh",
+    "preinstall": "chmod a+x scripts/**/*.sh && node ./scripts/install/remaining-github-api-calls.js",
     "pretest": "./scripts/install/npm-test.sh && ./scripts/install/fixtures.sh",
     "compile:css": "./scripts/compile/css.sh",
     "compile:js": " ./scripts/compile/js.sh",
