Rename & export log helper, refactor postuninstall scripts, add release scripts

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "adm-zip": "^0.4.13",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
+    "copy": "^0.3.2",
     "core-js": "^3.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-markdown": "^1.0.0",
     "gh-rate-limit": "^1.0.0",
     "include-media": "^1.4.9",
+    "jszip": "^3.3.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
@@ -67,13 +69,14 @@
     "lint:js": "./scripts/lint/js.sh",
     "lint:php": "./scripts/lint/php.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
+    "release": "./scripts/postinstall/composer.sh && ./scripts/postinstall/npm.sh && node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
     "test": "./scripts/test/npm-install.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
-    "postinstall": "./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh",
-    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/dependencies.sh",
+    "postinstall": "./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh && ./scripts/postinstall/npm.sh",
+    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/dependencies.sh",
     "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh"
   },
   "repository": {
