--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "postcss-custom-properties": "^9.1.1",
     "postcss-pxtorem": "^4.0.1",
     "postcss-typescale": "^0.2.3",
-    "sass-lint": "^1.13.1",
+    "stylelint": "^13.3.1",
+    "stylelint-config-standard": "^20.0.0",
     "tenon-node": "^0.4.1",
     "yargs": "^15.1.0"
   },
