Migrate sass-lint property ordering

--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -1,7 +1,172 @@
 {
     "extends": "stylelint-config-sass-guidelines",
+    "plugins": [
+		"stylelint-order"
+	],
     "rules": {
         "indentation": "tab",
-        "number-leading-zero": null
-      }
+        "number-leading-zero": null,
+		"order/properties-order": [
+            "content",
+            "display",
+            "visibility",
+            "opacity",
+            "position",
+            "top",
+            "right",
+            "bottom",
+            "left",
+            "z-index",
+            "float",
+            "clear",
+            "width",
+            "height",
+            "min-width",
+            "min-height",
+            "max-width",
+            "max-height",
+            "align-content",
+            "align-items",
+            "align-self",
+            "flex",
+            "flex-basis",
+            "flex-direction",
+            "flex-flow",
+            "flex-grow",
+            "flex-shrink",
+            "flex-wrap",
+            "justify-content",
+            "order",
+            "vertical-align",
+            "background",
+            "background-attachment",
+            "background-image",
+            "background-repeat",
+            "background-position",
+            "background-size",
+            "background-color",
+            "background-clip",
+            "clip",
+            "color",
+            "font",
+            "font-family",
+            "font-size",
+            "line-height",
+            "font-weight",
+            "font-style",
+            "font-smoothing",
+            "osx-font-smoothing",
+            "text-align",
+            "text-decoration",
+            "text-indent",
+            "text-overflow",
+            "text-rendering",
+            "text-size-adjust",
+            "text-shadow",
+            "text-transform",
+            "word-spacing",
+            "word-break",
+            "word-wrap",
+            "letter-spacing",
+            "white-space",
+            "direction",
+            "speak",
+            "list-style",
+            "list-style-type",
+            "list-style-position",
+            "list-style-image",
+            "box-sizing",
+            "padding",
+            "padding-top",
+            "padding-right",
+            "padding-bottom",
+            "padding-left",
+            "border",
+            "border-collapse",
+            "border-top",
+            "border-right",
+            "border-bottom",
+            "border-left",
+            "border-color",
+            "border-image",
+            "border-top-color",
+            "border-right-color",
+            "border-bottom-color",
+            "border-left-color",
+            "border-spacing",
+            "border-style",
+            "border-top-style",
+            "border-right-style",
+            "border-bottom-style",
+            "border-left-style",
+            "border-width",
+            "border-top-width",
+            "border-right-width",
+            "border-bottom-width",
+            "border-left-width",
+            "border-radius",
+            "border-top-right-radius",
+            "border-bottom-right-radius",
+            "border-bottom-left-radius",
+            "border-top-left-radius",
+            "border-radius-topright",
+            "border-radius-bottomright",
+            "border-radius-bottomleft",
+            "border-radius-topleft",
+            "box-shadow",
+            "margin",
+            "margin-top",
+            "margin-right",
+            "margin-bottom",
+            "margin-left",
+            "margin-collapse",
+            "margin-top-collapse",
+            "margin-right-collapse",
+            "margin-bottom-collapse",
+            "margin-left-collapse",
+            "overflow",
+            "overflow-x",
+            "overflow-y",
+            "outline",
+            "outline-style",
+            "outline-offset",
+            "transform",
+            "filter",
+            "animation",
+            "animation-delay",
+            "animation-duration",
+            "animation-iteration-count",
+            "animation-name",
+            "animation-play-state",
+            "animation-timing-function",
+            "animation-fill-mode",
+            "transition",
+            "transition-delay",
+            "transition-duration",
+            "transition-property",
+            "transition-timing-function",
+            "pointer-events",
+            "cursor",
+            "user-select",
+            "hyphens",
+            "src",
+            "quotes",
+            "size",
+            "zoom",
+            "box-align",
+            "box-flex",
+            "box-orient",
+            "box-pack",
+            "table-layout",
+            "backface-visibility",
+            "resize",
+            "appearance",
+            "interpolation-mode",
+            "marks",
+            "page",
+            "set-link-source",
+            "unicode-bidi"
+		],
+        "string": "single"
+	}
 }
