--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stylelint": "^13.3.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-order": "^4.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.0",
     "tenon-node": "^0.4.1",
     "yargs": "^15.1.0"
   },
